# html2notion

./: .coveragerc  .gitignore  LICENSE  README.md  README_zh.md  __init__.py  config.json  main.py  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
demos/: Test Case A.html  Test Case B.html  Test Case C.html  Test Case D.html  Test Case E.html  Test Case F.html  Test Case G.html  Test Case H.html  TestCaseA.html  TestCaseB.html  paragram_simple.html  paragram_simple.json  yinxiang.html  yinxiang.json  yinxiang_clipper.html  yinxiang_clipper.json  yinxiang_clipper_2.html  yinxiang_clipper_wx.html  yinxiang_clipper_wx.json  yinxiang_gbk.html  yinxiang_markdown.html  yinxiang_markdown.json  yinxiang_md.html  yinxiang_mobile.html  yinxiang_normal.html  yinxiang_normal_format.html  yinxiang_supernote.html
examples/: insert_divider.ipynb  insert_table.ipynb  insert_text.ipynb  insert_todo.ipynb  parse_code.ipynb  parse_tag.ipynb  process_md.ipynb
html2notion/: main.py
html2notion/translate/: batch_import.py  cos_uploader.py  html2json.py  html2json_base.py  html2json_clipper.py  html2json_default.py  html2json_markdown.py  html2json_yinxiang.py  import_stats.py  notion_export.py  notion_import.py
html2notion/utils/: __init__.py  convert.py  load_config.py  log.py  timeutil.py  url_process.py
tests/: conftest.py  test_batchimport.py  test_config.py  test_cosupload.py  test_demos.py  test_html2json.py  test_log.py  test_notionexport.py  test_reqlimit.py  test_util.py  test_yinxiang.py
utils/: __init__.py  load_config.py  log.py
