[metadata]
name = html2notion
version = 0.1.0
author = selfboot
author_email = xuezaigds@gmail.com
description = This tool can accurately convert HTML to Notion notes and is also useful for exporting Evernote notes to Notion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/selfboot/html2notion
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
install_requires =
    autopep8,
    beautifulsoup4,
    notion-client,
    PyYAML
  
[options.entry_points]
console_scripts =
    html2notion = html2notion.main:main