[metadata]
name = html2notion
version = 0.1.2
author = selfboot
author_email = xuezaigds@gmail.com
description = This tool can accurately convert HTML to Notion notes and is also useful for exporting Evernote notes to Notion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/selfboot/html2notion
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.11.2
    httpcore>=0.16.3
    httpx>=0.23.3
    notion-client>=2.0.0
    PyYAML>=6.0
    aiohttp>=3.8.4
    anyio>=3.6.2
    rich>=13.3.4
    cos-python-sdk-v5>=1.9.23
    tenacity>=8.2.2

[options.entry_points]
console_scripts =
    html2notion = html2notion.main:main
